<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/PaddingBottomFragments"
    android:paddingLeft="@dimen/PaddingCoteFragments"
    android:paddingRight="@dimen/PaddingCoteFragments"
    android:paddingTop="@dimen/PaddingTopFragments"
    >

    <LinearLayout
        android:id="@+id/MyLineraLayout1"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >


        <CheckBox
            android:id="@+id/cbF1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_petitbutton"
            android:layout_weight="1"
            android:text="@string/lblFenetre1"
            android:gravity="center"
            />

        <CheckBox
            android:id="@+id/cbF2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_petitbutton"
            android:layout_weight="1"
            android:text="@string/lblFenetre2"
            android:gravity="center"
            />

        <CheckBox
            android:id="@+id/cbF3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_petitbutton"
            android:layout_weight="1"
            android:text="@string/lblFenetre3"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MyLineraLayout2"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/MyLineraLayout1"
        android:orientation="horizontal"
        >


        <CheckBox
            android:id="@+id/cbF4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_petitbutton"
            android:layout_weight="1"
            android:text="@string/lblFenetre4"
            android:gravity="center"
            />

        <CheckBox
            android:id="@+id/cbF5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_petitbutton"
            android:layout_weight="1"
            android:text="@string/lblFenetre5"
            android:gravity="center"
            />

        <CheckBox
            android:id="@+id/cbF6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_petitbutton"
            android:layout_weight="1"
            android:text="@string/lblFenetre6"
            android:gravity="center"
            />
    </LinearLayout>

    <Space
        android:id="@+id/mySpace1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/MyLineraLayout2" />

    <LinearLayout
        android:id="@+id/MyLineraLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/mySpace1"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <Button
            android:id="@+id/btOuvrir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/textsize_grosbutton"
            android:drawableStart="@android:drawable/arrow_up_float"
            android:drawableLeft="@android:drawable/arrow_up_float"
            android:text="@string/lblOuvrir"
            />

        <Button
            android:id="@+id/btStop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_grosbutton"
            android:layout_weight="1"
            android:text="@string/lblStop"
            android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:drawablePadding="-20dp"
            />

        <Button
            android:id="@+id/btFermer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/textsize_grosbutton"
            android:drawableStart="@android:drawable/arrow_down_float"
            android:drawableLeft="@android:drawable/arrow_down_float"
            android:text="@string/lblFermer"
            />
    </LinearLayout>

</RelativeLayout>