<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/PaddingBottomFragments"
    android:paddingLeft="@dimen/PaddingCoteFragments"
    android:paddingRight="@dimen/PaddingCoteFragments"
    android:paddingTop="@dimen/PaddingTopFragments"
    >

    <Space
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFenetre1"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/taille_textview_avant_BoutonGroup"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btOuvrirF1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lblOuvrir"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/btStopF1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lblStop"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/btFermerF1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lblFermer"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>


        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFenetre2"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/taille_textview_avant_BoutonGroup"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btOuvrirF2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblOuvrir"
                android:layout_gravity="center_horizontal"
              />

            <Button
                android:id="@+id/btStopF2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblStop"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btFermerF2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFermer"
                android:layout_gravity="center_horizontal"
                 />

        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFenetre3"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/taille_textview_avant_BoutonGroup"
                android:gravity="center"
                />


            <Button
                android:id="@+id/btOuvrirF3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblOuvrir"
                android:layout_gravity="center_horizontal"
                 />

            <Button
                android:id="@+id/btStopF3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblStop"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btFermerF3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFermer"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFenetre4"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/taille_textview_avant_BoutonGroup"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btOuvrirF4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lblOuvrir"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/btStopF4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lblStop"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btFermerF4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lblFermer"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>


        <Space
            android:layout_width="10dp"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFenetre5"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/taille_textview_avant_BoutonGroup"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btOuvrirF5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblOuvrir"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/btStopF5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblStop"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btFermerF5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFermer"
                android:layout_gravity="center_horizontal"
                 />

        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="fill_parent" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFenetre6"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/taille_textview_avant_BoutonGroup"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btOuvrirF6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblOuvrir"
                android:layout_gravity="center_horizontal"
               />

            <Button
                android:id="@+id/btStopF6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblStop"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btFermerF6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblFermer"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btToutOuvrir"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lblToutOuvrir"
            android:textSize="35dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btToutFermer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lblToutFermer"
            android:textSize="35dp"
            android:layout_weight="1"
            />
        </LinearLayout>
</LinearLayout>